tests/unit/elastx/resources/kubespray/wc/kube-system/file-copier.yaml
---
# Source: file-copier/templates/ingress-nginx-chroot-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: seccompprofile-copier
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: seccompprofile-copier
      app.kubernetes.io/instance: seccompprofile-copier
      app.kubernetes.io/name: file-copier
  template:
    metadata:
      labels:
        app.kubernetes.io/component: seccompprofile-copier
        app.kubernetes.io/instance: seccompprofile-copier
        app.kubernetes.io/name: file-copier
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - |
          sleep 2s
          cp -L /mnt/ingress-nginx-chroot.json /var/lib/kubelet/seccomp/profiles/
          sleep infinity
        image: busybox:1.36
        name: file-copier
        resources:
          limits:
            cpu: 20m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 10Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 0
        volumeMounts:
        - mountPath: /mnt/
          name: chroot-seccompprofile
          readOnly: true
        - mountPath: /var/lib/kubelet/seccomp/profiles/
          name: chroot-seccompprofile-host
          readOnly: false
      dnsPolicy: ClusterFirst
      securityContext: {}
      volumes:
      - name: chroot-seccompprofile
        configMap:
          name: ingress-nginx-chroot-seccompprofile
      - name: chroot-seccompprofile-host
        hostPath:
          path: /var/lib/kubelet/seccomp/profiles/
          type: DirectoryOrCreate
